samples/_failures_safe/1761298871_6d0a84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e553b3f4.c: In function ‘main’:
./samples/SAFE/__tmp_e553b3f4.c:182:15: error: ‘StateMachine’ has no member named ‘current’
  182 |             sm.current
      |               ^
./samples/SAFE/__tmp_e553b3f4.c:182:23: error: expected ‘;’ at end of input
  182 |             sm.current
      |                       ^
      |                       ;
./samples/SAFE/__tmp_e553b3f4.c:182:13: error: expected declaration or statement at end of input
  182 |             sm.current
      |             ^~
./samples/SAFE/__tmp_e553b3f4.c:182:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e553b3f4.c:182:13: error: expected declaration or statement at end of input
